# tinyrenderer

./: .gitignore  README.md
renderer/: CMakeLists.txt  framebuffer.tga  occl.tga  output.tga
renderer/src/: geometry.h  main.cpp  our_gl.cpp  our_gl.h  tgaimage.cpp  tgaimage.h
